--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ dist/
 firebase-debug.log
 firestore-debug.log
 ui-debug.log
+*-firebase-adminsdk-*.json
+service-account-*.json
 
 # Environment variables
 .env
